Add (more) GENDER to two messages
Add GENDER for the word "mentor" where appropriate.

Change-Id: I25f8a696b4329ab6f299bebd54a0a07386b15a5e

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -371,9 +371,9 @@
 	"log-action-filter-growthexperiments-addlink": "Link suggestions",
 	"log-action-filter-growthexperiments-addimage": "Image suggestions",
 	"growthexperiments-homepage-claimmentee-invalid-username": "Provided mentee's username is invalid",
-	"growthexperiments-notification-header-mentor-change": "$1 {{GENDER:$2|is}} {{GENDER:$3|your}} new mentor",
+	"growthexperiments-notification-header-mentor-change": "$1 {{GENDER:$2|is}} {{GENDER:$3|your}} new {{GENDER:$2|mentor}}",
 	"growthexperiments-notification-body-mentor-change": "Reason: $1",
-	"growthexperiments-notification-body-mentor-change-new": "{{GENDER:|Your}} former mentor, $1, is no longer {{GENDER:|your mentor}}.",
+	"growthexperiments-notification-body-mentor-change-new": "{{GENDER:|Your}} former {{GENDER:$1|mentor}}, $1, is no longer {{GENDER:|your}} {{GENDER:$1|mentor}}.",
 	"growthexperiments-notification-say-hi-mentor-change": "{{GENDER:$3|Say}} hi to {{GENDER:$3|your}} new {{GENDER:$2|mentor}}!",
 	"growthexperiments-homepage-claimmentee-must-be-mentor": "{{GENDER:$1|You}} must be listed as a mentor on [[$2]] to be able to use Special:ClaimMentee",
 	"growthexperiments-homepage-mentors-list-missing-or-misconfigured-generic": "The list of mentors is misconfigured.",
