UserImpact: Leave total editcount uncapped
Why:
More tenured users generally have more than 1k of edits. Because of
how long Growth features are a thing, some tenured editors have newcomer
homepage enabled, and are unhappy when the editcount is capped at 999+,
since they cannot keep updates of it.

The cap has two main purposes:
    * some metrics take long time to execute, and a cap can limit
      the maximum time we spend processing data,
    * we do not have unlimited space for displaying numbers, and
      practically speaking, only numbers up to a certain value
      can be reasonably displayed in the space we have available.

The first reason is not important for the user editcount, since
that is available in `user_editcount` field of the `user` table,
and is always readily available. It used to be important previously,
when we only counted mainspace edits in this field (which is an information
that is not readily available).

The second reason is irrelevant as well, since the space designated to
fit the total editcount can easily fit numbers amounting billions,
which is more than what we have to display for any current user,
and for the foreseeable future.

The patch also changes copies for (i) icon for other numbers to include
language about limitting, which is used to inform users what numbers
they're actually seeing.

What:
* Remove the cap for total editcount information
* Rework ComputedUserImpactLookup to use UserEditTracker to get
  the editcount.
* Remove UserOptionsLookup, since that is not used for anything ATM.
* Change (i) messages in en.json (qqq.json).

Bug: T338174
Change-Id: I40ad511694316d54e007f91913af093ecb138de1

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -77,10 +77,10 @@
 	"growthexperiments-homepage-impact-scores-thanks-count": "Thanks received",
 	"growthexperiments-homepage-impact-scores-over-limit": "999+",
 	"growthexperiments-homepage-impact-scores-thanks-info-label": "More information about how thanks works",
-	"growthexperiments-homepage-impact-scores-thanks-info-text": "{{SITENAME}} is created by a community of editors like {{GENDER:$1|you}}. {{GENDER:$1|You}} may be thanked by another contributor for an edit {{GENDER:$1|you’ve}} made, and {{GENDER:$1|you}} can thank others for their edits too.",
-	"growthexperiments-homepage-impact-scores-thanks-info-text-third-person": "{{SITENAME}} is created by a community of editors. Any contributor may be thanked by another for an edit. The number of thanks received is shown here.",
-	"growthexperiments-homepage-impact-scores-best-streak-info-text": "This is the highest number of days in a row that {{GENDER:$1|you}} made at least one edit.",
-	"growthexperiments-homepage-impact-scores-best-streak-info-text-third-person": "This is the highest number of days in a row that at least one edit was made.",
+	"growthexperiments-homepage-impact-scores-thanks-info-text": "{{SITENAME}} is created by a community of editors like {{GENDER:$1|you}}. {{GENDER:$1|You}} may be thanked by another contributor for an edit {{GENDER:$1|you’ve}} made, and {{GENDER:$1|you}} can thank others for their edits too. The metric will only include thanks received for {{GENDER:|your}} most recent $2 edits.",
+	"growthexperiments-homepage-impact-scores-thanks-info-text-third-person": "{{SITENAME}} is created by a community of editors. Any contributor may be thanked by another for an edit. The number of thanks received is shown here. The metric will only include thanks received for the most recent $1 edits.",
+	"growthexperiments-homepage-impact-scores-best-streak-info-text": "This is the highest number of days in a row that {{GENDER:$1|you}} made at least one edit. This metric will only reflect editing streaks included in your most recent $2 edits.",
+	"growthexperiments-homepage-impact-scores-best-streak-info-text-third-person": "This is the highest number of days in a row that at least one edit was made. This metric will only reflect editing streaks included in the most recent $1 edits.",
 	"growthexperiments-homepage-impact-scores-streak-info-label": "More information about the longest streak",
 	"growthexperiments-homepage-impact-scores-best-streak-info-data-text": "{{GENDER:$1|Your}} current longest streak is $2 {{PLURAL:$2|day|days}} which {{GENDER:$1|you}} achieved between $3.",
 	"growthexperiments-homepage-impact-scores-best-streak-info-data-text-third-person": "The current longest streak is $1 {{PLURAL:$1|day|days}} which was achieved between $2.",
