--- a/i18n/mentorship/api/en.json
+++ b/i18n/mentorship/api/en.json
@@ -31,5 +31,6 @@
 	"apihelp-growthinvalidatepersonalizedpraisesuggestion-summary": "Invalidates a suggestion of a praiseworthy mentee in the Personalized praise module on the Mentor dashboard",
 	"apihelp-growthinvalidatepersonalizedpraisesuggestion-param-mentee": "Mentee to invalidate",
 	"apihelp-growthinvalidatepersonalizedpraisesuggestion-param-reason": "Reason to invalidate the suggestion",
-	"apihelp-growthinvalidatepersonalizedpraisesuggestion-param-skipreason": "Skip reason to invalidate the suggestion"
+	"apihelp-growthinvalidatepersonalizedpraisesuggestion-param-skipreason": "Skip reason to invalidate the suggestion",
+	"apihelp-query+growthmentorlist-summary": "List all the mentors"
 }
