Add GEUseCommunityConfigurationExtension feature flag
Why:
The Growth team works on the CommunityConfiguration extension,
which re-implements the ability for administrators to edit
MediaWiki configuration on-wiki in a different way.

This patch allows developers to switch from the GE-specific
implementation of community configuration (so-called CC1.0)
into the new dedicated implementation that CommunityConfiguration
represents.

The patch is meant to make GrowthExperiments stop use any of its
CC1.0 implementation if GEUseCommunityConfigurationExtension is true,
including the editing form.

Notes:
CommunityConfiguration expects client extensions to use a single
Config object (=the one provided by CommunityConfiguration)
for all config needs. This enables client extensions to seamlessly
switch between configurable and non-configurable fields (it is a matter
of changing the scmea), without having to review their usage across their
whole repository. To fully benefit from this expectation, we need to change
how we approach config within GrowthExperiments.

What:
* Introduce `GEUseCommunityConfigurationExtension` config flag, which
  is false by default.
* Create `GrowthExperimentsCommunityConfig`, which either returns
  the `GrowthExperimentsMultiConfig` service or the CommunityConfiguration
  provided service, depending on the feature flag.
* Switch SpecialEditGrowthConfig's registration to a conditional one,
  based on the feature flag value.
* Move two schemas from CommunityConfigurationExample to GrowthExperiments

Bug: T359124
Depends-On: If9db50b8ba8dc835a7d5e1c49de83e7ff2941c01
Change-Id: I2b6e3436c08100442baf4ed65582d0bc17fd449c

--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -100,5 +100,20 @@
 	"growthexperiments-edit-config-try-suggested-edits-notification-title": "Try Suggested edits notification",
 	"growthexperiments-edit-config-try-suggested-edits-notification-description": "Maximum number of edits a newcomer can have to qualify for receiving this notification. If set to 0, no newcomers </br> will receive this notification. The higher the number, the more newcomers will receive this notification.<br> This notification is only sent to newcomers who have not completed Suggested edits.",
 	"growthexperiments-edit-config-keep-going-notification-title": "Keep going notification",
-	"growthexperiments-edit-config-keep-going-notification-description": "Maximum number of suggested edits a newcomer can complete to qualify for receiving this notification. If set to 0,<br> no newcomers will receive this notification. The higher the number, the more newcomers will receive this notification.<br> This notification is only sent to newcomers who have already completed at least one Suggested edit."
+	"growthexperiments-edit-config-keep-going-notification-description": "Maximum number of suggested edits a newcomer can complete to qualify for receiving this notification. If set to 0,<br> no newcomers will receive this notification. The higher the number, the more newcomers will receive this notification.<br> This notification is only sent to newcomers who have already completed at least one Suggested edit.",
+	"communityconfiguration-mentorship-title": "Mentorship",
+	"communityconfiguration-mentorship-description": "Customize mentorship settings and eligibility, while adjusting edit minimums and timeframes for mentors and praise-worthy mentees.",
+	"communityconfiguration-mentorship-gementorshipautomaticeligibility-label": "Should users be automatically eligible for mentorship?",
+	"communityconfiguration-mentorship-gementorshipautomaticeligibility-control-label": "x",
+	"communityconfiguration-mentorship-gementorshipenabled-label": "Are mentorship features enabled?",
+	"communityconfiguration-mentorship-gementorshipenabled-control-label": "x",
+	"communityconfiguration-mentorship-gementorshipminimumage-label": "Minimum number of days a user must be registered to sign up as a mentor",
+	"communityconfiguration-mentorship-gementorshipminimumeditcount-label": "Minimum number of edits a user must have made (on any namespace) to sign up as a mentor",
+	"communityconfiguration-mentorship-gepersonalizedpraisedays-label": "Number of days that are considered when evaluating mentee's praiseworthiness",
+	"communityconfiguration-mentorship-gepersonalizedpraisedays-help-text": "Mentors can change this option for their own user in the Mentor dashboard.",
+	"communityconfiguration-mentorship-gepersonalizedpraisedefaultnotificationsfrequency-label": "By default, how often should mentors receive notifications to remind them to send encouragement to mentees who are editing successfully?",
+	"communityconfiguration-mentorship-gepersonalizedpraisedefaultnotificationsfrequency-help-text": "Mentors can change this option for their own user in the Mentor dashboard.",
+	"communityconfiguration-mentorship-gepersonalizedpraisemaxedits-label": "Maximum number of edits an user can have to be considered praiseworthy",
+	"communityconfiguration-mentorship-gepersonalizedpraiseminedits-label": "Default minimum number of edits a mentee must have to be praiseworthy",
+	"communityconfiguration-mentorship-gepersonalizedpraiseminedits-help-text": "Mentors can change this option for their own user in the Mentor dashboard."
 }
