--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -113,5 +113,20 @@
 	"growthexperiments-edit-config-try-suggested-edits-notification-title": "Subheader in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-try-suggested-edits-notification-description": "Description of trying suggested edits notification section in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-keep-going-notification-title": "Subheader in Special:EditGrowthConfig. \"Keep going\" should be consistent with {{msg-mw|Growthexperiments-levelingup-keepgoing-notification-header}}.\n\n{{doc-growthexperiments-community-configuration}}",
-	"growthexperiments-edit-config-keep-going-notification-description": "Description of keep going notification section in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}"
+	"growthexperiments-edit-config-keep-going-notification-description": "Description of keep going notification section in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"communityconfiguration-mentorship-title": "Headline of the Community configuration module for mentorship",
+	"communityconfiguration-mentorship-description": "Description of the Community configuration module for mentorship",
+	"communityconfiguration-mentorship-gementorshipautomaticeligibility-label": "Field label for mentorship in Community configuration",
+	"communityconfiguration-mentorship-gementorshipautomaticeligibility-control-label": "Field label for mentorship in Community configuration",
+	"communityconfiguration-mentorship-gementorshipenabled-label": "Field label for mentorship in Community configuration",
+	"communityconfiguration-mentorship-gementorshipenabled-control-label": "Field label for mentorship in Community configuration",
+	"communityconfiguration-mentorship-gementorshipminimumage-label": "Field label for mentorship in Community configuration",
+	"communityconfiguration-mentorship-gementorshipminimumeditcount-label": "Field label for mentorship in Community configuration",
+	"communityconfiguration-mentorship-gepersonalizedpraisedays-label": "Field label for mentorship in Community configuration",
+	"communityconfiguration-mentorship-gepersonalizedpraisedays-help-text": "Help text for mentorship in Community configuration",
+	"communityconfiguration-mentorship-gepersonalizedpraisedefaultnotificationsfrequency-label": "Field label for mentorship in Community configuration",
+	"communityconfiguration-mentorship-gepersonalizedpraisedefaultnotificationsfrequency-help-text": "Help text for mentorship in Community configuration",
+	"communityconfiguration-mentorship-gepersonalizedpraisemaxedits-label": "Field label for mentorship in Community configuration",
+	"communityconfiguration-mentorship-gepersonalizedpraiseminedits-label": "Field label for mentorship in Community configuration",
+	"communityconfiguration-mentorship-gepersonalizedpraiseminedits-help-text": "Help text for mentorship in Community configuration"
 }
