--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -101,6 +101,19 @@
 	"growthexperiments-edit-config-try-suggested-edits-notification-description": "Maximum number of edits a newcomer can have to qualify for receiving this notification. If set to 0, no newcomers </br> will receive this notification. The higher the number, the more newcomers will receive this notification.<br> This notification is only sent to newcomers who have not completed Suggested edits.",
 	"growthexperiments-edit-config-keep-going-notification-title": "Keep going notification",
 	"growthexperiments-edit-config-keep-going-notification-description": "Maximum number of suggested edits a newcomer can complete to qualify for receiving this notification. If set to 0,<br> no newcomers will receive this notification. The higher the number, the more newcomers will receive this notification.<br> This notification is only sent to newcomers who have already completed at least one Suggested edit.",
+	"communityconfiguration-helppanel-title": "Help panel",
+	"communityconfiguration-helppanel-description": "Customize Help panel settings to align with your community's requirements and define resources within it to assist and guide new editors.",
+	"communityconfiguration-helppanel-gehelppanelexcludednamespaces-label": "Namespaces with the help panel disabled in both reading and editing mode",
+	"communityconfiguration-helppanel-gehelppanelreadingmodenamespaces-label": "Namespaces where the help panel is available in reading mode",
+	"communityconfiguration-helppanel-gehelppanelsearchnamespaces-label": "Namespaces to include in the help panel's free text search for help",
+	"communityconfiguration-helppanel-gehelppanelhelpdesktitle-label": "Help desk page where questions should be posted from the help panel.",
+	"communityconfiguration-helppanel-gehelppanellinks-0-label": "First link",
+	"communityconfiguration-helppanel-gehelppanellinks-1-label": "Second link",
+	"communityconfiguration-helppanel-gehelppanellinks-2-label": "Third link",
+	"communityconfiguration-helppanel-gehelppanellinks-3-label": "Fourth link",
+	"communityconfiguration-helppanel-gehelppanellinks-4-label": "Fifth link",
+	"communityconfiguration-helppanel-gehelppanellinks-title-label": "Destination page",
+	"communityconfiguration-helppanel-gehelppanellinks-label-label": "Label",
 	"communityconfiguration-mentorship-title": "Mentorship",
 	"communityconfiguration-mentorship-description": "Customize mentorship settings and eligibility, while adjusting edit minimums and timeframes for mentors and praise-worthy mentees.",
 	"communityconfiguration-mentorship-gementorshipautomaticeligibility-label": "Should users be automatically eligible for mentorship?",
