--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -134,5 +134,46 @@
 	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-image-label": "Destination page for a link about how to add images in the visual editor",
 	"communityconfiguration-growthsuggestededits-title": "Suggested edits",
 	"communityconfiguration-growthsuggestededits-geinfoboxtemplates-label": "Infobox templates",
-	"communityconfiguration-growthsuggestededits-geinfoboxtemplates-help-text": "These templates are needed for the image suggestions newcomer task feature. Articles containing these templates will not be listed as image suggestion tasks."
+	"communityconfiguration-growthsuggestededits-geinfoboxtemplates-help-text": "These templates are needed for the image suggestions newcomer task feature. Articles containing these templates will not be listed as image suggestion tasks.",
+	"communityconfiguration-growthsuggestededits-copyedit-label": "Copyedit",
+	"communityconfiguration-growthsuggestededits-copyedit-disabled-label": "Is the task enabled?",
+	"communityconfiguration-growthsuggestededits-copyedit-disabled-control-label": "The task is disabled.",
+	"communityconfiguration-growthsuggestededits-copyedit-templates-label": "Copy editing: templates to find articles that need copy editing, such as spelling, grammar, and punctuation improvements.",
+	"communityconfiguration-growthsuggestededits-copyedit-excludedtemplates-label": "Articles containing templates defined here will not be shown to users as tasks for this task type.",
+	"communityconfiguration-growthsuggestededits-copyedit-excludedcategories-label": "Articles containing categories defined here will not be shown to users as tasks for this task type.",
+	"communityconfiguration-growthsuggestededits-copyedit-learnmore-label": "Destination page for learning more about copy editing.",
+	"communityconfiguration-growthsuggestededits-links-label": "Add links between articles",
+	"communityconfiguration-growthsuggestededits-links-templates-label": "Links: templates to find articles that need more links.",
+	"communityconfiguration-growthsuggestededits-links-excludedtemplates-label": "Articles containing templates defined here will not be shown to users as tasks for this task type.",
+	"communityconfiguration-growthsuggestededits-links-excludedcategories-label": "Articles containing categories defined here will not be shown to users as tasks for this task type.",
+	"communityconfiguration-growthsuggestededits-links-learnmore-label": "Destination page for learning more about adding links.",
+	"communityconfiguration-growthsuggestededits-references-label": "Find references",
+	"communityconfiguration-growthsuggestededits-references-templates-label": "References: templates to find articles that need more references.",
+	"communityconfiguration-growthsuggestededits-references-excludedtemplates-label": "Articles containing templates defined here will not be shown to users as tasks for this task type.",
+	"communityconfiguration-growthsuggestededits-references-excludedcategories-label": "Articles containing categories defined here will not be shown to users as tasks for this task type.",
+	"communityconfiguration-growthsuggestededits-references-learnmore-label": "Destination page for learning more about adding references.",
+	"communityconfiguration-growthsuggestededits-update-label": "Update articles",
+	"communityconfiguration-growthsuggestededits-update-templates-label": "Update: templates to find articles that need to be updated with current information.",
+	"communityconfiguration-growthsuggestededits-update-excludedtemplates-label": "Articles containing templates defined here will not be shown to users as tasks for this task type.",
+	"communityconfiguration-growthsuggestededits-update-excludedcategories-label": "Articles containing categories defined here will not be shown to users as tasks for this task type.",
+	"communityconfiguration-growthsuggestededits-update-learnmore-label": "Destination page for learning more about updating articles.",
+	"communityconfiguration-growthsuggestededits-expand-label": "Expand short articles",
+	"communityconfiguration-growthsuggestededits-expand-templates-label": "Expand: templates to find articles that need expansion.",
+	"communityconfiguration-growthsuggestededits-expand-excludedtemplates-label": "Articles containing templates defined here will not be shown to users as tasks for this task type.",
+	"communityconfiguration-growthsuggestededits-expand-excludedcategories-label": "Articles containing categories defined here will not be shown to users as tasks for this task type.",
+	"communityconfiguration-growthsuggestededits-expand-learnmore-label": "Destination page for learning more about expanding articles.",
+	"communityconfiguration-growthsuggestededits-image_recommendation-label": " Add an image to an unillustrated article",
+	"communityconfiguration-growthsuggestededits-image_recommendation-disabled-label": "Is the task enabled?",
+	"communityconfiguration-growthsuggestededits-image_recommendation-disabled-control-label": "The task is disabled.",
+	"communityconfiguration-growthsuggestededits-image_recommendation-excludedtemplates-label": "Articles containing templates defined here will not be shown to users as tasks for this task type.",
+	"communityconfiguration-growthsuggestededits-image_recommendation-excludedcategories-label": "Articles containing categories defined here will not be shown to users as tasks for this task type",
+	"communityconfiguration-growthsuggestededits-image_recommendation-learnmore-label": "Destination page for learning more about image recommendation task type",
+	"communityconfiguration-growthsuggestededits-image_recommendation-maxtasksperday-label": "The maximum number of \"Add an image to an unillustrated article\" suggested tasks a newcomer can complete daily",
+	"communityconfiguration-growthsuggestededits-section_image_recommendation-label": "Add an image to an article section",
+	"communityconfiguration-growthsuggestededits-section_image_recommendation-disabled-label": "Is the task enabled?",
+	"communityconfiguration-growthsuggestededits-section_image_recommendation-disabled-control-label": "The task is disabled.",
+	"communityconfiguration-growthsuggestededits-section_image_recommendation-excludedtemplates-label": "Articles containing templates defined here will not be shown to users as tasks for this task type.",
+	"communityconfiguration-growthsuggestededits-section_image_recommendation-excludedcategories-label": "Articles containing categories defined here will not be shown to users as tasks for this task type",
+	"communityconfiguration-growthsuggestededits-section_image_recommendation-learnmore-label": "Destination page for learning more about image recommendation task type",
+	"communityconfiguration-growthsuggestededits-section_image_recommendation-maxtasksperday-label": "The maximum number of \"Add an image to an unillustrated article\" suggested tasks a newcomer can complete daily"
 }
