Config: add partial suggested edits schema
- Add only "GEInfoboxTemplates" configuration option
which uses "PageTitles" Mediawiki definition from
community configuration.

Bug: T360471
Depends-On: I384eb017f41e665a43583aac2620157d94e61ffd
Change-Id: I752ea041632338a388770585fcf4f111e139782a

--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -119,5 +119,8 @@
 	"communityconfiguration-growthhomepage-title": "Newcomer Homepage",
 	"communityconfiguration-growthhomepage-description": "Define what are the Help links that you want new editors to go through.",
 	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-create-label": "Destination help for a link about creating a new article",
-	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-image-label": "Destination page for a link about how to add images in the visual editor"
+	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-image-label": "Destination page for a link about how to add images in the visual editor",
+	"communityconfiguration-growthsuggestededits-title": "Suggested edits",
+	"communityconfiguration-growthsuggestededits-geinfoboxtemplates-label": "Infobox templates",
+	"communityconfiguration-growthsuggestededits-geinfoboxtemplates-help-text": "These templates are needed for the image suggestions newcomer task feature. Articles containing these templates will not be listed as image suggestion tasks."
 }
