--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -132,5 +132,8 @@
 	"communityconfiguration-growthhomepage-title": "Headline of the Community configuration module for homepage",
 	"communityconfiguration-growthhomepage-description": "Description of the Community configuration module for homepage",
 	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-create-label": "Field label for Growth homepage in Community configuration",
-	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-image-label": "Field label for Growth homepage in Community configuration"
+	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-image-label": "Field label for Growth homepage in Community configuration",
+	"communityconfiguration-growthsuggestededits-title": "Headline of the Community configuration module for suggested edits",
+	"communityconfiguration-growthsuggestededits-geinfoboxtemplates-label": "Field label for Suggested Edits in Community configuration\n\nSame as {{msg-mw|growthexperiments-edit-config-newcomer-tasks-infobox-templates}}",
+	"communityconfiguration-growthsuggestededits-geinfoboxtemplates-help-text": "Help text for Suggested Edits in Community configuration\n\nSame as {{msg-mw|growthexperiments-edit-config-newcomer-tasks-infobox-templates-help}}"
 }
