--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -103,6 +103,7 @@
 	"growthexperiments-edit-config-keep-going-notification-description": "Maximum number of suggested edits a newcomer can complete to qualify for receiving this notification. If set to 0,<br> no newcomers will receive this notification. The higher the number, the more newcomers will receive this notification.<br> This notification is only sent to newcomers who have already completed at least one Suggested edit.",
 	"communityconfiguration-mentorship-title": "Mentorship",
 	"communityconfiguration-mentorship-description": "Customize mentorship settings and eligibility, while adjusting edit minimums and timeframes for mentors and praise-worthy mentees.",
+	"communityconfiguration-mentorship-info-text": "Mentors can have two roles. By default, they are randomly assigned to newcomers. An option exists for mentors that only want to be mentors to people from events or classes: they don't get any newcomers assigned to them, but they can claim them. The ideal number of mentors is: one mentor for each group of 500 new accounts, with a minimum of 3 mentors. [https://www.mediawiki.org/wiki/Help:Growth/Mentorship Know more about how mentorship works].",
 	"communityconfiguration-mentorship-gementorshipautomaticeligibility-label": "Should users be automatically eligible for mentorship?",
 	"communityconfiguration-mentorship-gementorshipautomaticeligibility-control-label": "x",
 	"communityconfiguration-mentorship-gementorshipenabled-label": "Are mentorship features enabled?",
