Mentorship config: display inlined checkbox labels
Use the 'control-label' instead of the main 'label'
for checkbox controls. It will display inlined text
by the side of the checkbox rather than a field label
on top.

Bug: T362905
Change-Id: I555754037e31bbf5559fd08f29c9ad78a43a84ab

--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -104,10 +104,8 @@
 	"communityconfiguration-mentorship-title": "Mentorship",
 	"communityconfiguration-mentorship-description": "Customize mentorship settings and eligibility, while adjusting edit minimums and timeframes for mentors and praise-worthy mentees.",
 	"communityconfiguration-mentorship-info-text": "Mentors can have two roles. By default, they are randomly assigned to newcomers. An option exists for mentors that only want to be mentors to people from events or classes: they don't get any newcomers assigned to them, but they can claim them. The ideal number of mentors is: one mentor for each group of 500 new accounts, with a minimum of 3 mentors. [https://www.mediawiki.org/wiki/Help:Growth/Mentorship Know more about how mentorship works].",
-	"communityconfiguration-mentorship-gementorshipautomaticeligibility-label": "Should users be automatically eligible for mentorship?",
-	"communityconfiguration-mentorship-gementorshipautomaticeligibility-control-label": "x",
-	"communityconfiguration-mentorship-gementorshipenabled-label": "Are mentorship features enabled?",
-	"communityconfiguration-mentorship-gementorshipenabled-control-label": "x",
+	"communityconfiguration-mentorship-gementorshipautomaticeligibility-control-label": "Mentorship features are turned on",
+	"communityconfiguration-mentorship-gementorshipenabled-control-label": "Editors who meet all eligibility criteria are automatically enrolled as mentors",
 	"communityconfiguration-mentorship-gementorshipminimumage-label": "Minimum number of days a user must be registered to sign up as a mentor",
 	"communityconfiguration-mentorship-gementorshipminimumeditcount-label": "Minimum number of edits a user must have made (on any namespace) to sign up as a mentor",
 	"communityconfiguration-mentorship-gepersonalizedpraisedays-label": "Number of days that are considered when evaluating mentee's praiseworthiness",
