--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -103,6 +103,12 @@
 	"growthexperiments-edit-config-keep-going-notification-description": "Maximum number of suggested edits a newcomer can complete to qualify for receiving this notification. If set to 0,<br> no newcomers will receive this notification. The higher the number, the more newcomers will receive this notification.<br> This notification is only sent to newcomers who have already completed at least one Suggested edit.",
 	"communityconfiguration-helppanel-title": "Help panel",
 	"communityconfiguration-helppanel-description": "Customize Help panel settings to align with your community's requirements and define resources within it to assist and guide new editors.",
+	"communityconfiguration-helppanel-gehelppanelaskmentor-label": "Where should questions from the help panel be directed?",
+	"communityconfiguration-helppanel-gehelppanelaskmentor-option-mentor-talk-page-label": "Mentor talk pages",
+	"communityconfiguration-helppanel-gehelppanelaskmentor-option-help-desk-page-label": "Help desk",
+	"communityconfiguration-helppanel-gehelppanelpostontop-label": "Where on the help desk page should new questions be posted?",
+	"communityconfiguration-helppanel-gehelppanelpostontop-option-top-label": "Top of page",
+	"communityconfiguration-helppanel-gehelppanelpostontop-option-bottom-label": "Bottom of page",
 	"communityconfiguration-helppanel-gehelppanelexcludednamespaces-label": "Namespaces with the help panel disabled in both reading and editing mode",
 	"communityconfiguration-helppanel-gehelppanelreadingmodenamespaces-label": "Namespaces where the help panel is available in reading mode",
 	"communityconfiguration-helppanel-gehelppanelsearchnamespaces-label": "Namespaces to include in the help panel's free text search for help",
