Config: add missing provider description
Change-Id: I9d7a1708cc984b003da37d1bde806e1010bdafee

--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -151,6 +151,7 @@
 	"communityconfiguration-growthhomepage-description": "Description of the Community configuration module for homepage",
 	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-create-label": "Field label for Growth homepage in Community configuration",
 	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-image-label": "Field label for Growth homepage in Community configuration",
+	"communityconfiguration-growthsuggestededits-description": "Description of the Community configuration module for suggested edits",
 	"communityconfiguration-growthsuggestededits-title": "Headline of the Community configuration module for suggested edits",
 	"communityconfiguration-growthsuggestededits-geinfoboxtemplates-label": "Field label for Suggested Edits in Community configuration\n\nSame as {{msg-mw|growthexperiments-edit-config-newcomer-tasks-infobox-templates}}",
 	"communityconfiguration-growthsuggestededits-geinfoboxtemplates-help-text": "Help text for Suggested Edits in Community configuration\n\nSame as {{msg-mw|growthexperiments-edit-config-newcomer-tasks-infobox-templates-help}}",
