--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -133,7 +133,9 @@
 	"communityconfiguration-helppanel-gehelppanellinks-3-label": "Field label for the fourth help panel link in Community configuration",
 	"communityconfiguration-helppanel-gehelppanellinks-4-label": "Field label for the fifth help panel link in Community configuration",
 	"communityconfiguration-helppanel-gehelppanellinks-title-label": "Field label for the title of help panel links in Community configuration",
+	"communityconfiguration-helppanel-gehelppanellinks-title-placeholder": "Placeholder for the page input of the help panel links section, see {{msg-mw|communityconfiguration-helppanel-gehelppanellinks-title-label}} for the input's label. This should be an ''example'' for a typical help-link page.",
 	"communityconfiguration-helppanel-gehelppanellinks-text-label": "Field label for the label of help panel links in Community configuration",
+	"communityconfiguration-helppanel-gehelppanellinks-text-placeholder": "Placeholder for the human readable label input of the help panel links section, see {{msg-mw|communityconfiguration-helppanel-gehelppanellinks-text-label}} for the input's label. This should be an ''example'' for a typical help-link user-readable text.",
 	"communityconfiguration-mentorship-title": "Headline of the Community configuration module for mentorship",
 	"communityconfiguration-mentorship-description": "Description of the Community configuration module for mentorship",
 	"communityconfiguration-mentorship-info-text": "This message describes the roles of mentors within the community. It explains that mentors are typically assigned to newcomers by default but can opt to only mentor individuals from specific events. It also provides guidance on the recommended number of mentors based on the number of new accounts. It includes a link for users to learn more about how mentorship works.",
