--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -11,9 +11,9 @@
 	"growthexperiments-edit-config-title": "Edit Growth configuration",
 	"growthexperiments-edit-config-last-edit": "[[$3]]: Last updated by [[User:$1|$1]] $2 ([$4 diff]).",
 	"growthexperiments-edit-config-last-edit-unknown-user": "[[$2]]: Last updated by unknown user $1 ([$3 diff]).",
-	"growthexperiments-edit-config-pretext": "This page allows you to edit configuration of [[:mw:Special:MyLanguage/Growth|Growth]] team features. It will edit $1 on your behalf. You can see your changes in the page history of that page.",
+	"growthexperiments-edit-config-pretext": "This page allows you to edit configuration of [https://www.mediawiki.org/wiki/Special:MyLanguage/Growth Growth] team features. It will edit $1 on your behalf. You can see your changes in the page history of that page.",
 	"growthexperiments-edit-config-pretext-banner": "{{GENDER:|You}} can also display a banner on the newcomer homepage, to include announcement about events important to newcomers. If {{GENDER:|you}} want to do so, {{GENDER:|you}} need to add it to [[$1]] manually. Any content added there will be displayed in a yellow banner at the top of [[Special:Homepage]].",
-	"growthexperiments-edit-config-pretext-unprivileged": "This form allows privileged users to edit configuration of [[:mw:Special:MyLanguage/Growth|Growth]] team features.",
+	"growthexperiments-edit-config-pretext-unprivileged": "This form allows privileged users to edit configuration of [https://www.mediawiki.org/wiki/Special:MyLanguage/Growth Growth] team features.",
 	"growthexperiments-edit-config-feedback-headline": "Do you have ideas or questions about this form?",
 	"growthexperiments-edit-config-feedback-cta": "Give feedback",
 	"growthexperiments-edit-config-error-invalid-title": "Configuration page was not configured properly",
@@ -49,7 +49,7 @@
 	"growthexperiments-edit-config-homepage-intro-links-create": "Destination page for a link about creating a new article",
 	"growthexperiments-edit-config-homepage-intro-links-image": "Destination page for a link about how to add images in the visual editor",
 	"growthexperiments-edit-config-mentorship": "Mentorship",
-	"growthexperiments-edit-config-mentorship-description-structured": "Mentors can have two roles. By default, they are randomly assigned to newcomers. An option exists for mentors that only want to be mentors to people from events or classes: they don't get any newcomers assigned to them, but they can claim them.\n\nThe ideal number of mentors is: one mentor for each group of 500 new accounts, with a minimum of 3 mentors.\n\n[[mw:Special:MyLanguage/Growth/FAQ#Mentorship|Know more about how mentorship works]]",
+	"growthexperiments-edit-config-mentorship-description-structured": "Mentors can have two roles. By default, they are randomly assigned to newcomers. An option exists for mentors that only want to be mentors to people from events or classes: they don't get any newcomers assigned to them, but they can claim them.\n\nThe ideal number of mentors is: one mentor for each group of 500 new accounts, with a minimum of 3 mentors.\n\n[https://www.mediawiki.org/wiki/Special:MyLanguage/Growth/FAQ#Mentorship Know more about how mentorship works]",
 	"growthexperiments-edit-config-mentorship-enabled": "Are mentorship features enabled?",
 	"growthexperiments-edit-config-mentorship-enabled-true": "Yes",
 	"growthexperiments-edit-config-mentorship-enabled-false": "No",
@@ -91,8 +91,8 @@
 	"growthexperiments-edit-config-newcomer-tasks-excluded-templates": "Articles containing templates defined here will not be shown to users as tasks for this task type.",
 	"growthexperiments-edit-config-newcomer-tasks-excluded-categories": "Articles containing categories defined here will not be shown to users as tasks for this task type.",
 	"growthexperiments-edit-config-newcomer-tasks-infobox-templates": "Infobox templates",
-	"growthexperiments-edit-config-newcomer-tasks-infobox-templates-help": "These templates are needed for the [[mw:Growth/Personalized_first_day/Structured_tasks/Add_an_image|image suggestions]] newcomer task feature. Articles containing these templates will not be listed as image suggestion tasks.",
-	"growthexperiments-edit-config-delayed": "Changes to this setting won't take effect immediately (see [[mw:Growth/FAQ#add-link-config|FAQ]]).",
+	"growthexperiments-edit-config-newcomer-tasks-infobox-templates-help": "These templates are needed for the [https://www.mediawiki.org/wiki/Growth/Personalized_first_day/Structured_tasks/Add_an_image image suggestions] newcomer task feature. Articles containing these templates will not be listed as image suggestion tasks.",
+	"growthexperiments-edit-config-delayed": "Changes to this setting won't take effect immediately (see [https://www.mediawiki.org/wiki/Growth/FAQ#add-link-config FAQ]).",
 	"growthexperiments-info-tooltip-close-label": "Close",
 	"specialpages-group-growth-tools": "Growth tools",
 	"growthexperiments-edit-config-level-up-notifications": "Notifications: Growth Features",
