--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -123,6 +123,7 @@
 	"communityconfiguration-helppanel-gehelppanellinks-title-placeholder": "Wikipedia:Writing_better_articles",
 	"communityconfiguration-helppanel-gehelppanellinks-text-label": "Label",
 	"communityconfiguration-helppanel-gehelppanellinks-text-placeholder": "How to write a good article",
+	"communityconfiguration-helppanel-gehelppanelviewmoretitle-label": "Destination page for \"View more help articles\"",
 	"communityconfiguration-mentorship-title": "Mentorship",
 	"communityconfiguration-mentorship-description": "Customize mentorship settings and eligibility, while adjusting edit minimums and timeframes for mentors and praise-worthy mentees.",
 	"communityconfiguration-mentorship-info-text": "Mentors can have two roles. By default, they are randomly assigned to newcomers. An option exists for mentors that only want to be mentors to people from events or classes: they don't get any newcomers assigned to them, but they can claim them. The ideal number of mentors is: one mentor for each group of 500 new accounts, with a minimum of 3 mentors. [https://www.mediawiki.org/wiki/Help:Growth/Mentorship Know more about how mentorship works].",
