--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -138,10 +138,15 @@
 	"communityconfiguration-mentorship-gepersonalizedpraisemaxedits-label": "Maximum number of edits an user can have to be considered praiseworthy",
 	"communityconfiguration-mentorship-gepersonalizedpraiseminedits-label": "Default minimum number of edits a mentee must have to be praiseworthy",
 	"communityconfiguration-mentorship-gepersonalizedpraiseminedits-help-text": "Mentors can change this option for their own user in the Mentor dashboard.",
-	"communityconfiguration-growthhomepage-title": "Newcomer Homepage",
-	"communityconfiguration-growthhomepage-description": "Define what are the Help links that you want new editors to go through.",
+	"communityconfiguration-growthhomepage-title": "Newcomer onboarding",
+	"communityconfiguration-growthhomepage-description": "Personalize onboarding for new account holders via post-registration help, Leveling up notifications, and defining infobox templates.",
+	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-label": "Newcomer homepage links",
 	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-create-label": "Destination help for a link about creating a new article",
 	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-image-label": "Destination page for a link about how to add images in the visual editor",
+	"communityconfiguration-growthhomepage-gelevelingupgetstartedmaxtotaledits-label": "Try Suggested edits notification",
+	"communityconfiguration-growthhomepage-gelevelingupgetstartedmaxtotaledits-help-text": "Maximum number of edits a newcomer can have to qualify for receiving this notification. If set to 0, no newcomers will receive this notification. The higher the number, the more newcomers will receive this notification. This notification is only sent to newcomers who have not completed Suggested edits.",
+	"communityconfiguration-growthhomepage-gelevelingupkeepgoingnotificationthresholds-label": "Keep going notification",
+	"communityconfiguration-growthhomepage-gelevelingupkeepgoingnotificationthresholds-help-text": "Maximum number of suggested edits a newcomer can complete to qualify for receiving this notification. If set to 0, no newcomers will receive this notification. The higher the number, the more newcomers will receive this notification. This notification is only sent to newcomers who have already completed at least one Suggested edit.",
 	"communityconfiguration-growthsuggestededits-description": "Customize the newcomer homepage's Suggested edits feature.",
 	"communityconfiguration-growthsuggestededits-title": "Suggested edits",
 	"communityconfiguration-growthsuggestededits-geinfoboxtemplates-label": "Infobox templates",
