--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -151,10 +151,15 @@
 	"communityconfiguration-mentorship-gepersonalizedpraisemaxedits-label": "Field label for mentorship in Community configuration",
 	"communityconfiguration-mentorship-gepersonalizedpraiseminedits-label": "Field label for mentorship in Community configuration",
 	"communityconfiguration-mentorship-gepersonalizedpraiseminedits-help-text": "Help text for mentorship in Community configuration",
-	"communityconfiguration-growthhomepage-title": "Headline of the Community configuration module for homepage",
-	"communityconfiguration-growthhomepage-description": "Description of the Community configuration module for homepage",
-	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-create-label": "Field label for Growth homepage in Community configuration",
-	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-image-label": "Field label for Growth homepage in Community configuration",
+	"communityconfiguration-growthhomepage-title": "Headline of the Community configuration module for the newcomer onboarding",
+	"communityconfiguration-growthhomepage-description": "Description of the Community configuration module for the newcomer onboarding",
+	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-label": "Field label for Growth's newcomer onboarding homepage links in Community configuration",
+	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-create-label": "Field label for Growth's newcomer onboarding homepage links in Community configuration",
+	"communityconfiguration-growthhomepage-gehomepagesuggestededitsintrolinks-image-label": "Field label for Growth's newcomer onboarding homepage links in Community configuration",
+	"communityconfiguration-growthhomepage-gelevelingupgetstartedmaxtotaledits-label": "Field label for Growth's newcomer onboarding leveling up noitification in Community configuration\n\nSame as {{mw-msg|growthexperiments-edit-config-try-suggested-edits-notification-title}}",
+	"communityconfiguration-growthhomepage-gelevelingupgetstartedmaxtotaledits-help-text": "Field label for Growth's newcomer onboarding leveling up noitification help text in Community configuration\n\nSame as {{mw-msg|growthexperiments-edit-config-keep-going-notification-description}}",
+	"communityconfiguration-growthhomepage-gelevelingupkeepgoingnotificationthresholds-label": "Field label for Growth's newcomer onboarding in Community configuration\n\nSame as {{mw-msg|growthexperiments-edit-config-keep-going-notification-title}}",
+	"communityconfiguration-growthhomepage-gelevelingupkeepgoingnotificationthresholds-help-text": "Help text for Growth's newcomer onboarding in Community configuration\n\nSame as {{mw-msg|growthexperiments-edit-config-keep-going-notification-title}}",
 	"communityconfiguration-growthsuggestededits-description": "Description of the Community configuration module for suggested edits",
 	"communityconfiguration-growthsuggestededits-title": "Headline of the Community configuration module for suggested edits",
 	"communityconfiguration-growthsuggestededits-geinfoboxtemplates-label": "Field label for Suggested Edits in Community configuration\n\nSame as {{msg-mw|growthexperiments-edit-config-newcomer-tasks-infobox-templates}}",
