--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -115,6 +115,7 @@
 	"communityconfiguration-helppanel-gehelppanelsearchnamespaces-label": "Namespaces to include in the help panel's free text search for help",
 	"communityconfiguration-helppanel-gehelppanelhelpdesktitle-label": "Help desk page where questions should be posted from the help panel.",
 	"communityconfiguration-helppanel-gehelppanellinks-label": "Help panel links",
+	"communityconfiguration-helppanel-gehelppanellinks-item-label": "$1. Help panel link",
 	"communityconfiguration-helppanel-gehelppanellinks-0-label": "First link",
 	"communityconfiguration-helppanel-gehelppanellinks-1-label": "Second link",
 	"communityconfiguration-helppanel-gehelppanellinks-2-label": "Third link",
