Reword …-specialimpact-invalid-inclusion-… message
I found that people have a very hard time translating this message
on translatewiki. There is no named parameter. The inclusion syntax
is {{Special:Impact/JonDoe}}. I think the message can explain this
better.

Bug: T368249
Change-Id: Ia21dcf74fb64e7cc8ce1076f2205185e8b9bfe16

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -173,7 +173,7 @@
 	"growthexperiments-specialimpact-title": "Impact",
 	"growthexperiments-specialimpact-showing-for-other-user": "Showing impact data for $1",
 	"growthexperiments-specialimpact-invalid-username": "Missing or invalid username.",
-	"growthexperiments-specialimpact-invalid-inclusion-without-username": "Missing username parameter on included special page Impact.",
+	"growthexperiments-specialimpact-invalid-inclusion-without-username": "When including the special page \"Impact\" a username must be provided as the first parameter.",
 	"growthexperiments-homepage-claimmentee-no-user": "Mentee doesn't exist",
 	"growthexperiments-homepage-claimmentee-already-mentor": "{{GENDER:$2|You}} already mentor {{GENDER:$1|$1}}",
 	"growthexperiments-homepage-claimmentee-opt-out": "{{GENDER:$1|$1}} opted out of mentorship",
